# bias_inference_emri

./: .gitignore  config_paris.py  inference.py  main.py  misc.py  pyproject.toml
src/: batch.sh  config_paris.py  inference.py  misc.py  results_EMRI.ipynb  signal_parameter_from_run_0.json  signal_parameter_from_run_0.npy  signal_parameter_from_run_1.npy  signal_parameter_from_run_2.npy  starting_point_0.npy  starting_point_emri.npy  starting_point_imri.npy  test.ipynb  test_code.ipynb  utils.py
src/basic_results/: baseline_stats.json
