[project]
name = "bias-inference-emri"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "astropy>=6.0.1",
    "corner>=2.2.3",
    "cupy-cuda12x==13.6.0",
    "emd-signal>=1.9.0",
    "eryn>=1.2.3",
    "fastlisaresponse-cuda12x>=1.1.17",
    "gpubackendtools>=0.0.18",
    "ipython>=8.18.1",
    "jupyter>=1.1.1",
    "lisaanalysistools>=1.1.8",
    "lisaanalysistools-cuda12x>=1.2.0",
    "numpy>=1.26.4",
    "pyemd>=1.1.0",
    "scipy>=1.13.1",
    "seaborn>=0.13.2",
    "typing>=3.10.0.0",
]

[tool.uv]
dev-dependencies = []
package = false
